
	* Fixed CTCP source reply URL. (#86)

  FEATURES

    * More advanced help support

	* Add LOG_LEVEL command (#101)

	* Add 'make uninstall' (#95)

	* Do some more config checking (#102)

	* Show disconnect reason in admin network (#100)

	* Add support for handling additional 005 parameters: MAXCHANNELS,
		NICKLEN, MAXBANS, MODES, NICKLEN, MAXBANS, TOPICLEN, KICKLEN, 
		AWAYLEN, MAXTARGETS.

  PORTABILITY

    * Looks for check using pkg-config now.

  DOCUMENTATION

Ctrlproxy 3.0.1 2007-01-04

  BUG FIXES

    * Logging for network state information has been simplified and been 
	  made less verbose.

	* 324 and 329 replies are now cached.

	* 352 and 315 replies are now (optionally) cached. The "max_who_age" 
	  setting can be set to the number of seconds that results should be cached.
	  This prevents "Excess Flood" errors when connecting using several xchat clients
	  at once. Can be disabled by setting max_who_age=0 (the default).

    * Fixed bug in administration command (reported by Daniel Poelzleithner)

    * Fix invalid assert in auto-away (reported by Daniel Poelzleithner)

	* Fix rejoining parted channels on restart (#78)

	* Fix erroneus toggling of "report-time" setting (#77)
	
	* Fix endless loop in logging system when debug level is 
	  set to 5 (reported by _static_).
	
	* listener configuration is no longer truncated at exit.

	* Fix channel information not being replicated for the administration 
	  network.

	* Allow ports different than 6680 in ctrlproxy --init. (#85)

  PORTABILITY
  
    * Added replacement functions for g_file_{set,get}_contents, for those 
      with GLib < 2.8
    
  DOCUMENTATION UPDATES

    * Updated command documentation (thanks, Korbinian Rosenegger)

    * Updated requirements

  MINOR CHANGES

    * Fixed several compiler warnings

Ctrlproxy 3.0	2006-12-08

  This list is not complete. Several subsystems in ctrlproxy have been 
  rewritten.

  BUG FIXES

    * NetBSD portability fixes. (Adrian Portelli)
