@@ -34,7 +34,9 @@ Ctrlproxy 3.0.2 UNRELEASED
 
 	* Add support for handling additional 005 parameters: MAXCHANNELS,
 		NICKLEN, MAXBANS, MODES, NICKLEN, MAXBANS, TOPICLEN, KICKLEN, 
-		AWAYLEN, MAXTARGETS.
+		AWAYLEN, MAXTARGETS, WALLCHOPS, WALLVOICES, RFC2812, PENALTY,
+		FNC, SAFELIST, USERIP, CNOTICE, KNOCK, VCHANNELS, WHOX, CALLERID,
+		ACCEPT.
 
   PORTABILITY
 
